--- a/manifest.json
+++ b/manifest.json
@@ -4,20 +4,14 @@
     "version": "1.0",
   
     "description": "Allows custom insertion of code to be run on specific websites when they load. Use at your own peril",
-    "homepage_url": "https://github.com/mdn/webextensions-examples/tree/master/beastify",
+    "homepage_url": "https://github.com/rjp-coder/code-injector",
     "icons": {
-      "48": "icons/beasts-48.png"
+      "48": "icons/injector-32.png"
     },
   
     "permissions": [
       "activeTab",
       "storage"
-    ],
-  
-    "web_accessible_resources": [
-      "beasts/frog.jpg",
-      "beasts/turtle.jpg",
-      "beasts/snake.jpg"
     ],
 
     "content_scripts": [
@@ -26,22 +20,17 @@
           "<all_urls>"
         ],
         "js": [
-          "build/injectGlobalHook.js"
+          "content_scripts/injectGlobalHook.js"
         ],
         "run_at": "document_start"
       }
     ],
 
     "browser_action": {
-      "default_icon": "icons/beasts-32.png",
+      "default_icon": "icons/injector-32.png",
       "default_title": "Injector",
       "default_popup": "popup/injector.html"
-    },
-
-    "background": {
-      "scripts": []
     }
-
-    
+   
   }
   
